--- a/package.json
+++ b/package.json
@@ -17,51 +17,54 @@
     "start:prodserver": "node dist/server/server/main"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^9.1.6",
-    "@nestjs/platform-socket.io": "^9.1.6",
-    "@nestjs/serve-static": "^3.0.0",
-    "@nestjs/websockets": "^9.1.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.2.5",
+    "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/websockets": "^10.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
     "@tailwindcss/forms": "^0.5.2",
     "@types/express": "^4.17.13",
-    "@types/jest": "27.4.1",
-    "@types/node": "^16.0.0",
-    "@types/react": "^17.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@types/jest": "29.5.4",
+    "@types/node": "^20.6.0",
+    "@types/react": "^18.2.21",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.7",
     "bundle-loader": "^0.5.6",
-    "concurrently": "^7.5.0",
+    "concurrently": "^8.2.1",
     "css-loader": "^6.7.1",
-    "esbuild-loader": "^2.20.0",
+    "esbuild-loader": "^4.0.2",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.2.5",
+    "jest": "^29.7.0",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
-    "prettier": "^2.3.2",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "rimraf": "^3.0.2",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "rimraf": "^5.0.1",
     "source-map-support": "^0.5.20",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.4",
-    "ts-jest": "^27.0.3",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5",
+    "ts-jest": "^29.1.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^4.9.4",
     "util": "^0.12.5",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.11.1"
+  },
+  "resolutions": {
+    "engine.io": "6.5.1"
   }
 }
