--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,20 +1,28 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "declaration": false,
-    "noImplicitAny": false,
     "noUnusedLocals": false,
-    "removeComments": true,
     "noLib": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
     "useUnknownInCatchVariables": false,
-    "target": "es6",
-    "sourceMap": true,
     "allowJs": true,
     "outDir": "dist/server",
     "strict": true,
-    "lib": ["es7"]
+    "lib": ["es7","DOM"],
+    "module": "commonjs",
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "ES2021",
+    "sourceMap": true,
+    "baseUrl": "./",
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false
   },
   "include": ["src/server", "src/shared"],
   "exclude": ["src/client", "node_modules"]
