--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@nestjs/platform-socket.io": "^10.2.5",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/websockets": "^10.2.5",
+    "@tanstack/react-location": "^3.7.4",
+    "@tanstack/react-query": "^4.35.3",
+    "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
