--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start:prodserver": "node dist/server/server/main"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
@@ -28,10 +29,12 @@
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "socket.io": "^4.5.3",
-    "socket.io-client": "^4.5.3"
+    "socket.io-client": "^4.5.3",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
