--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
     "sourceMap": true,
     "baseUrl": "./",
     "incremental": true,
+    "strictPropertyInitialization": false,
     "skipLibCheck": true,
-    "strictNullChecks": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
