--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "start:prodserver": "node dist/server/server/main"
   },
   "dependencies": {
+    "@casl/ability": "^6.5.0",
     "@hookform/resolvers": "^3.3.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.2.5",
     "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/throttler": "^5.0.0",
     "@nestjs/websockets": "^10.2.5",
     "@tanstack/react-location": "^3.7.4",
     "@tanstack/react-query": "^4.35.3",
