--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@casl/ability": "^6.5.0",
     "@hookform/resolvers": "^3.3.1",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.2.5",
@@ -60,6 +61,7 @@
     "postcss-loader": "^7.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
+    "prisma": "^5.3.1",
     "rimraf": "^5.0.1",
     "source-map-support": "^0.5.20",
     "style-loader": "^3.3.1",
