--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/throttler": "^5.0.0",
     "@nestjs/websockets": "^10.2.5",
+    "@prisma/client": "^5.3.1",
     "@tanstack/react-location": "^3.7.4",
     "@tanstack/react-query": "^4.35.3",
     "axios": "^1.5.0",
