--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@casl/ability": "^6.5.0",
+    "@casl/prisma": "^1.4.1",
     "@hookform/resolvers": "^3.3.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
@@ -38,13 +39,15 @@
     "rxjs": "^7.2.0",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "zod-prisma-types": "^2.7.9"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@tailwindcss/forms": "^0.5.2",
+    "@types/cross-spawn": "^6.0.3",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.4",
     "@types/node": "^20.6.0",
