--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,15 @@
 version: '3.8'
 services:
+  reverse-proxy:
+    container_name: reverse-proxy
+    image: nginx:alpine
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    restart: 'unless-stopped'
+    networks:
+      - nestjs_network
   chatgambit:
     container_name: chatgambit
     build:
